--- a/_config.yml
+++ b/_config.yml
@@ -11,6 +11,7 @@ keywords: ZhW, Cube-Wang, Github, Gitpage
 timezone: Asia/Shanghai
 encoding: "utf-8"
 side_bar_repo_limit: 5
+theme: jekyll-theme-architect
 
 # ---------------- #
 #      Author      #
