--- a/_data/social.yml
+++ b/_data/social.yml
@@ -1,27 +1,23 @@
 - sitename: GitHub
-  name: mzlogin
-  url: https://github.com/mzlogin
+  name: Cube..
+  url: https://github.com/zhwing
 
-- sitename: 掘金
-  name: mzlogin
-  url: http://gold.xitu.io/user/570ddaeb2e958a005c63b2da
-
-- sitename: LinkedIn
-  name: mazhuang
-  url: https://www.linkedin.com/in/mazhuang
-
-- sitename: 博客
-  name: 码志
-  url: http://mazhuang.org
+- sitename: Gitpage
+  name: zhwing.github.io
+  url: https://zhwing.github.io
 
 - sitename: 微博
-  name: mzlogin
-  url: http://weibo.com/mzlogin
+  name: Zh_Woo
+  url: https://weibo.com/u/6278261924
 
 - sitename: 知乎
-  name: mzlogin
-  url: http://www.zhihu.com/people/mzlogin
+  name: cube
+  url: https://www.zhihu.com/people/cube-60-32/activities
 
-- sitename: 豆瓣
-  name: 壮哥不胖
-  url: http://www.douban.com/people/freedim
+- sitename: Twiter
+  name: Cube...
+  url: https://twitter.com/MBeC0CfmzvIj6yv
+
+- sitename: Emaill
+  name: Cube-Wang
+  url: zhw980924@outlook.com
