--- a/_data/social.yml
+++ b/_data/social.yml
@@ -7,7 +7,7 @@
   url: https://zhwing.github.io
 
 - sitename: 微博
-  name: Zh_Woo
+  name: Zh_Wing
   url: https://weibo.com/u/6278261924
 
 - sitename: 知乎
