--- a/_config.yml
+++ b/_config.yml
@@ -16,7 +16,7 @@ theme: jekyll-theme-architect
 # ---------------- #
 #      Author      #
 # ---------------- #
-author: Cube-Wang
+author: ZhW
 organization: 
 organization_url: 
 github_username: ZhWing
