--- a/_config.yml
+++ b/_config.yml
@@ -66,6 +66,8 @@ google_analytics:
 # Used for Sitemap.xml and your RSS feed
 url: lazywa.github.io
 
+markdowm: kramdown
+
 # If you're hosting your site at a Project repository on GitHub pages
 # (http://yourusername.github.io/repository-name)
 # and NOT your User repository (http://yourusername.github.io)
